--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,45 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin: 20px;
+  padding: 0;
+  font-family: sans-serif;
+}
+.clear {
+  clear: both;
+  content: ""
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.game {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  /* text-align: center; */
+}
+
+.game-info {
+  min-height: 50px;
+}
+
+.cell {
+  background: #fff;
+  border: 1px solid #414c69;
+  float: left;
+  line-height: 20px;
+  height: 20px;
+  text-align: center;
+  width: 20px;
+  cursor: pointer;
+  user-select: none;
+}
+
+.cell:focus {
+  outline: none;
+}
+
+.hidden {
+  background: #7e7b92;
+}
+
+.is-flag,
+.is-mine {
+  color: #fc543c;
 }
