--- a/src/index.css
+++ b/src/index.css
@@ -1,50 +1,3 @@
-body {
-  margin: 20px;
-  padding: 0;
-  font-family: sans-serif;
-}
-.clear {
-  clear: both;
-}
-
-.game {
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-  text-align: center;
-}
-
-.game-info {
-  margin: auto;
-  display: flex;
-  min-height: 50px;
-  justify-content: space-between;
-}
-
-.cell {
-  border: 1px solid #414c69;
-  background: #fff;
-  /* float: left; */
-  display: inline-block;
-  vertical-align: top;
-  line-height: 20px;
-  height: 20px;
-  text-align: center;
-  width: 20px;
-  cursor: pointer;
-  user-select: none;
-}
-
-
-.cell:focus {
-  outline: none;
-}
-
-.hidden {
-  background: #7e7b92;
-}
-
-.is-flag,
-.is-mine {
-  color: #fc543c;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
